Increased permgen space in *nix scripts
git-svn-id: https://svn.alfresco.com/repos/alfresco-open-mirror/alfresco/HEAD@10260 7033f55c-6c29-4ad8-afba-765cb616e738

Former-commit-id: 8bb5f78bc133a6c07427d0bc3cf4142c78c62067